# Chimera

./: .dockerignore  .gitignore  APEX.md  APEX_V2.md  CHANGELOG.md  CHIMERA_TRANSPLANT_GUIDE.md  CORE_LOGIC_VERIFICATION.md  CORTEX_COMPLETE.md  Cargo.toml  DEPLOYMENT.md  FINAL_STATUS.md  GOD_MODE_COMPLETE.md  HIVE_MIND_COMPLETE.md  INTEGRATION.md  MISSION_ALPHA_EXECUTION.md  MISSION_ALPHA_RUN.md  Makefile  PHANTOM_COMPLETE.md  PROGRESS.md  QUICKSTART.md  RAILWAY_CLI_SETUP.md  RAILWAY_CONFIGURATION.md  RAILWAY_DEPLOYMENT.md  RAILWAY_STATUS.md  README.md  TRANSPLANT_FILE_LIST.md  api_server.py  docker-compose.apex.yml  docker-compose.yml  railway-setup.sh
brainscraper/: Dockerfile  requirements.txt
chimera-brain/: Dockerfile  generate_proto.sh  requirements.txt  setup.py
chimera-brain/chimera_brain/: server.py  vision_service.py
chimera-core/: APEX_BINARY_SANITIZATION.md  APEX_GOD_MODE.md  BEHAVIORAL_AUTHENTICITY_COMPLETE.md  BINARY_LOBOTOMY_COMPLETE.md  BINARY_PATCHING.md  BINARY_SANITIZATION_COMPLETE.md  Cargo.toml  Dockerfile  FINAL_IMPLEMENTATION_STATUS.md  GOD_MODE_IMPLEMENTATION.md  NETWORK_LAYER_AUTHENTICITY.md  REDIS_PROFILE_INTEGRATION.md  build.rs
chimera-core/scripts/: sanitize_binary.py
chimera-core/src/: agent.rs  binary_patch.rs  browser.rs  cortex.rs  dbi.rs  diffusion_mouse.rs  error.rs  ghost_mouse.rs  identity_grafting.rs  lib.rs  main.rs  mouse.rs  ooda.rs  stealth_transport.rs  vision_client.rs  world_model.rs
proto/: chimera.proto
scrapegoat-orchestrator/: Dockerfile  README.md
