[package]
name = "chimera-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headless_chrome = "0.9"
image = "0.24"
rand = "0.8"
rand_distr = "0.4"
redis = { version = "0.32", features = ["tokio-comp"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
reqwest-impersonate = { version = "0.11", default-features = false, features = ["boring-tls", "http2"] }
tungstenite = "0.21"
url = "2.5"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "http1", "tokio"] }
http-body-util = "0.1"
# ort = { version = "2.0", optional = true }  # ONNX Runtime for Rust (Diffusion model inference)
# ndarray = { version = "0.15", optional = true }  # For tensor operations

[features]
default = []
onnx = []  # Enable ONNX Runtime for Diffusion models

[build-dependencies]
tonic-build = "0.11"
